list screen data binding and item click added

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -22,5 +22,8 @@
         <action
             android:id="@+id/action_dealItemFragment_to_dealListFragment"
             app:destination="@id/dealListFragment" />
+        <argument
+            android:name="Deal"
+            app:argType="string" />
     </fragment>
 </navigation>
