--- a/app/src/main/res/drawable/gray_button_style.xml
+++ b/app/src/main/res/drawable/gray_button_style.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#E0E0E0" />
+    <solid android:color="@color/light_gray_color" />
     <corners android:radius="2dp" />
 </shape>
