--- a/app/src/main/res/layout/deal_list_item.xml
+++ b/app/src/main/res/layout/deal_list_item.xml
@@ -1,4 +1,6 @@
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
   <data>
     <variable
         name="clickListener"
@@ -8,53 +10,109 @@
         name="deal"
         type="com.target.targetcasestudy.data.DealItem" />
   </data>
-  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+  <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/deal_list_item"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_alignParentTop="true"
+      android:onClick="@{() -> clickListener.onClick(deal)}"
       android:orientation="horizontal"
-      android:padding="5dp"
-      android:onClick="@{() -> clickListener.onClick(deal)}">
+      android:background="@color/white"
+      android:padding="5dp">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="100dp"
+        android:layout_height="120dp"
+        android:layout_marginBottom="10dp"
+        android:src="@drawable/pic"
+        android:contentDescription="@string/product_image"
+        app:layout_constraintBottom_toTopOf="@+id/view3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/title_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:text="@{deal.title}"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="spread" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:background="@color/light_gray_color"
+        app:layout_constraintBottom_toTopOf="@+id/price_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/title_text" />
+
+    <TextView
+        android:id="@+id/price_text"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="15dp"
+        android:layout_marginBottom="10dp"
+        android:text="@{deal.regular_price.display_string}"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/view3"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/view" />
+
+    <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:orientation="vertical">
+        android:layout_marginEnd="5dp"
+        android:text="@string/ship"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/button3"
+        app:layout_constraintEnd_toStartOf="@+id/textView4"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/price_text"
+        app:layout_constraintTop_toTopOf="@+id/button3"
+        app:layout_constraintVertical_bias="0.482" />
 
-      <ImageView
-          android:id="@+id/deal_list_item_image_view"
-          android:layout_width="@dimen/deal_list_item_image_size"
-          android:layout_height="@dimen/deal_list_item_image_size"
-          android:src="@drawable/ic_launcher_foreground"
-          android:tint="@color/gray_color"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:orientation="vertical">
+        android:layout_marginEnd="5dp"
+        android:text="@string/or"
+        app:layout_constraintBottom_toBottomOf="@+id/button3"
+        app:layout_constraintEnd_toStartOf="@+id/button3"
+        app:layout_constraintTop_toTopOf="@+id/button3" />
 
-      <TextView
-          android:id="@+id/deal_list_item_title"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:textSize="18sp" />
-      <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="1dp"
-          android:background="@color/gray_color">
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
+        android:text="@{deal.aisle}"
+        app:layout_constraintBottom_toBottomOf="@+id/price_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/price_text" />
 
-      </LinearLayout>
-      <TextView
-          android:id="@+id/deal_list_item_price"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:textSize="18sp" />
-    </LinearLayout>
+    <View
+        android:id="@+id/view3"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/light_gray_color"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-  </LinearLayout>
+  </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
