--- a/app/src/main/res/layout/deal_list_item.xml
+++ b/app/src/main/res/layout/deal_list_item.xml
@@ -38,7 +38,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:text="@{deal.title}"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
@@ -51,6 +51,7 @@
         android:layout_height="1dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
+        android:layout_marginBottom="5dp"
         android:background="@color/light_gray_color"
         app:layout_constraintBottom_toTopOf="@+id/price_text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -59,12 +60,12 @@
 
     <TextView
         android:id="@+id/price_text"
-        android:layout_width="80dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginBottom="10dp"
         android:text="@{deal.regular_price.display_string}"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/view3"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toEndOf="@+id/imageView3"
@@ -90,16 +91,19 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
         android:text="@string/or"
+        android:alpha="0.5"
         app:layout_constraintBottom_toBottomOf="@+id/button3"
         app:layout_constraintEnd_toStartOf="@+id/button3"
         app:layout_constraintTop_toTopOf="@+id/button3" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:background="@drawable/round_button"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_marginEnd="15dp"
         android:text="@{deal.aisle}"
+        android:textColor="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="@+id/price_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/price_text" />
