--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
   <color name="gray_color">#666666</color>
   <color name="red_color">#cc0000</color>
-    <color name="light_gray_color">#E0E0E0</color>
+  <color name="light_gray_color">#E0E0E0</color>
   <color name="white">#ffffff</color>
+  <color name="textColor">#4F4F4F</color>
 </resources>
