--- a/app/src/main/res/layout/deal_list_item.xml
+++ b/app/src/main/res/layout/deal_list_item.xml
@@ -1,5 +1,4 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
   <data>
     <variable
@@ -21,13 +20,13 @@
       android:padding="5dp">
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/deal_image"
         android:layout_width="100dp"
         android:layout_height="120dp"
         android:layout_marginBottom="10dp"
         android:src="@drawable/pic"
         android:contentDescription="@string/product_image"
-        app:layout_constraintBottom_toTopOf="@+id/view3"
+        app:layout_constraintBottom_toTopOf="@+id/view_underline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,11 +36,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:text="@{deal.title}"
+        android:text="@{deal.dealTitle()}"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintStart_toEndOf="@+id/deal_image"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="spread" />
 
@@ -55,7 +54,7 @@
         android:background="@color/light_gray_color"
         app:layout_constraintBottom_toTopOf="@+id/price_text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintStart_toEndOf="@+id/deal_image"
         app:layout_constraintTop_toBottomOf="@+id/title_text" />
 
     <TextView
@@ -66,23 +65,24 @@
         android:layout_marginBottom="10dp"
         android:text="@{deal.regular_price.display_string}"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/view3"
+        app:layout_constraintBottom_toTopOf="@+id/view_underline"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintStart_toEndOf="@+id/deal_image"
         app:layout_constraintTop_toBottomOf="@+id/view" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/ship_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
         android:text="@string/ship"
+        android:textStyle="bold"
         android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/button3"
+        app:layout_constraintBottom_toBottomOf="@+id/aisle_button"
         app:layout_constraintEnd_toStartOf="@+id/textView4"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/price_text"
-        app:layout_constraintTop_toTopOf="@+id/button3"
+        app:layout_constraintTop_toTopOf="@+id/aisle_button"
         app:layout_constraintVertical_bias="0.482" />
 
     <TextView
@@ -91,13 +91,13 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
         android:text="@string/or"
-        android:alpha="0.5"
-        app:layout_constraintBottom_toBottomOf="@+id/button3"
-        app:layout_constraintEnd_toStartOf="@+id/button3"
-        app:layout_constraintTop_toTopOf="@+id/button3" />
+        android:alpha="0.2"
+        app:layout_constraintBottom_toBottomOf="@+id/aisle_button"
+        app:layout_constraintEnd_toStartOf="@+id/aisle_button"
+        app:layout_constraintTop_toTopOf="@+id/aisle_button" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/aisle_button"
         android:background="@drawable/round_button"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -109,7 +109,7 @@
         app:layout_constraintTop_toTopOf="@+id/price_text" />
 
     <View
-        android:id="@+id/view3"
+        android:id="@+id/view_underline"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/light_gray_color"
