--- a/app/src/main/res/layout/fragment_deal_list.xml
+++ b/app/src/main/res/layout/fragment_deal_list.xml
@@ -5,7 +5,8 @@
             name="viewModel"
             type="com.target.targetcasestudy.ui.DealListViewModel" />
     </data>
-    <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.recyclerview.widget.RecyclerView
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
