--- a/app/src/main/res/layout/deal_list_item.xml
+++ b/app/src/main/res/layout/deal_list_item.xml
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginBottom="10dp"
-        android:text="@{deal.regular_price.display_string}"
+        android:text="@{deal.salePrice()}"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/view_underline"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
