--- a/app/src/main/res/layout/fragment_deal_item.xml
+++ b/app/src/main/res/layout/fragment_deal_item.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
+        <import type="android.view.View"/>
         <variable
             name="deal"
             type="com.target.targetcasestudy.data.DealItem" />
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.DealItemFragment"
@@ -43,15 +44,17 @@
             android:id="@+id/deal_item_image"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:scaleType="centerCrop"
             android:layout_marginBottom="10dp"
-            app:layout_constraintBottom_toTopOf="@+id/textView7"
+            android:contentDescription="@string/product_image"
+            app:layout_constraintBottom_toTopOf="@+id/deal_price"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/deal_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="21dp"
@@ -67,45 +70,59 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/deal_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="21dp"
             android:layout_marginEnd="21dp"
-            android:layout_marginBottom="10dp"
-            android:text="@{deal.title}"
+            android:layout_marginBottom="5dp"
+            android:text="@{deal.dealTitle()}"
             android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/textView5"
+            app:layout_constraintBottom_toTopOf="@+id/deal_description"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
+            android:id="@+id/deal_price"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="21dp"
-            android:layout_marginBottom="10dp"
-            android:text="@{deal.regular_price.display_string}"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="5dp"
+            android:text="@{deal.salePrice()}"
             android:textColor="@color/colorPrimary"
             android:textSize="24sp"
-            app:layout_constraintBottom_toTopOf="@+id/textView6"
-            app:layout_constraintEnd_toStartOf="@+id/textView8"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/deal_title"
+            app:layout_constraintEnd_toStartOf="@+id/deal_regular_price"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView8" />
+            app:layout_constraintTop_toTopOf="@+id/deal_regular_price" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/deal_regular_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="21dp"
-            android:layout_marginBottom="10dp"
-            android:text="Reg:$17.99"
+            android:layout_marginBottom="5dp"
+            android:visibility="@{deal.isSalePriceSame()?View.VISIBLE:View.INVISIBLE}"
+            android:text="@{deal.regular_price.display_string}"
             android:textSize="24sp"
-            app:layout_constraintBottom_toTopOf="@+id/textView6"
+            app:layout_constraintBottom_toTopOf="@+id/deal_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/textView7" />
+            app:layout_constraintStart_toEndOf="@+id/deal_price" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/reg"
+            android:textSize="24sp"
+            android:visibility="@{deal.isSalePriceSame()?View.VISIBLE:View.INVISIBLE}"
+            app:layout_constraintBottom_toBottomOf="@+id/deal_price"
+            app:layout_constraintEnd_toStartOf="@+id/deal_regular_price"
+            app:layout_constraintStart_toEndOf="@+id/deal_price"
+            app:layout_constraintTop_toTopOf="@+id/deal_price" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
