--- a/app/src/main/res/layout/fragment_deal_item.xml
+++ b/app/src/main/res/layout/fragment_deal_item.xml
@@ -106,6 +106,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="21dp"
             android:layout_marginBottom="5dp"
+            android:alpha="0.5"
             android:visibility="@{deal.isSalePriceSame()?View.VISIBLE:View.INVISIBLE}"
             android:text="@{deal.regular_price.display_string}"
             android:textSize="24sp"
@@ -119,6 +120,7 @@
             android:layout_height="wrap_content"
             android:text="@string/reg"
             android:textSize="24sp"
+            android:alpha="0.5"
             android:visibility="@{deal.isSalePriceSame()?View.VISIBLE:View.INVISIBLE}"
             app:layout_constraintBottom_toBottomOf="@+id/deal_price"
             app:layout_constraintEnd_toStartOf="@+id/deal_regular_price"
