--- a/app/src/main/res/layout/fragment_deal_item.xml
+++ b/app/src/main/res/layout/fragment_deal_item.xml
@@ -15,30 +15,30 @@
         android:background="@color/white">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/add_to_list_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/add_to_list"
             android:textAllCaps="false"
             android:background="@drawable/gray_button_style"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/button2"
+            app:layout_constraintEnd_toStartOf="@+id/add_to_cart_button"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/add_to_cart_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/add_to_cart"
-            android:textColor="#ffffff"
+            android:textColor="@color/white"
             android:textAllCaps="false"
             android:background="@drawable/red_button_style"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/button" />
+            app:layout_constraintStart_toEndOf="@+id/add_to_list_button" />
 
         <ImageView
             android:id="@+id/deal_item_image"
@@ -65,7 +65,7 @@
             android:maxLines="7"
             android:maxLength="1000"
             android:text="@{deal.description}"
-            app:layout_constraintBottom_toTopOf="@+id/button"
+            app:layout_constraintBottom_toTopOf="@+id/add_to_list_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -91,7 +91,7 @@
             android:layout_marginBottom="5dp"
             android:text="@{deal.salePrice()}"
             android:textColor="@color/colorPrimary"
-            android:textSize="24sp"
+            android:textSize="28sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/deal_title"
             app:layout_constraintEnd_toStartOf="@+id/deal_regular_price"
@@ -109,7 +109,7 @@
             android:alpha="0.5"
             android:visibility="@{deal.isSalePriceSame()?View.VISIBLE:View.INVISIBLE}"
             android:text="@{deal.regular_price.display_string}"
-            android:textSize="24sp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/deal_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -119,7 +119,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/reg"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:alpha="0.5"
             android:visibility="@{deal.isSalePriceSame()?View.VISIBLE:View.INVISIBLE}"
             app:layout_constraintBottom_toBottomOf="@+id/deal_price"
