--- a/app/src/main/res/layout/fragment_deal_item.xml
+++ b/app/src/main/res/layout/fragment_deal_item.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:text="@string/add_to_list"
             android:textAllCaps="false"
+            android:textSize="18sp"
             android:background="@drawable/gray_button_style"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/add_to_cart_button"
@@ -34,6 +35,7 @@
             android:text="@string/add_to_cart"
             android:textColor="@color/white"
             android:textAllCaps="false"
+            android:textSize="18sp"
             android:background="@drawable/red_button_style"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
